# cslibs_ndt

./: .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  package.xml
cmake/: cslibs_ndt_enable_c++11.cmake  (+2 more)
cslibs_ndt/: CMakeLists.txt  package.xml
cslibs_ndt/cmake/: cslibs_ndt_add_unit_test_gtest.cmake  cslibs_ndt_extras.cmake  cslibs_ndt_openmp.cmake
cslibs_ndt/include/cslibs_ndt/backend/: octree.hpp
cslibs_ndt/include/cslibs_ndt/common/: bundle.hpp  distribution.hpp  distribution_container.hpp  indexed.hpp  occupancy_distribution.hpp  weighted_occupancy_distribution.hpp
cslibs_ndt/include/cslibs_ndt/common/serialization/: filesystem.hpp  indexed_distribution.hpp  indexed_occupancy_distribution.hpp  storage.hpp
cslibs_ndt/include/cslibs_ndt/conversion/: map.hpp
cslibs_ndt/include/cslibs_ndt/dynamic_maps/: gridmap.hpp  quad_gridmap.hpp
cslibs_ndt/include/cslibs_ndt/map/: abstract_map.hpp  generic_map.hpp  gridmap.hpp  integer_sequence.hpp  map.hpp  traits.hpp  utility.hpp
cslibs_ndt/include/cslibs_ndt/map/impl/: gridmap.hpp  occupancy_gridmap.hpp  utility.hpp  weighted_occupancy_gridmap.hpp
cslibs_ndt/include/cslibs_ndt/matching/: ceres_rotation_cost_functor_2d.hpp  ceres_rotation_cost_functor_3d.hpp  ceres_translation_cost_functor_2d.hpp  ceres_translation_cost_functor_3d.hpp  match.hpp  match_traits.hpp  occupancy_parameter.hpp  parameter.hpp  result.hpp  voxel.hpp
cslibs_ndt/include/cslibs_ndt/matching/alglib/: function.hpp
cslibs_ndt/include/cslibs_ndt/matching/ceres/: local_parameterization.hpp  problem.hpp  rotation_cost_functor_2d.hpp
cslibs_ndt/include/cslibs_ndt/matching/nlopt/: function.hpp
cslibs_ndt/include/cslibs_ndt/serialization/: filesystem.hpp  generic_map.hpp  indexed_distribution.hpp  indexed_occupancy_distribution.hpp  loader.hpp  map.hpp  storage.hpp
cslibs_ndt/include/cslibs_ndt/static_maps/: gridmap.hpp
cslibs_ndt/include/cslibs_ndt/utility/: bilinear_interpolation.hpp  binary_indices.hpp  create.hpp  for_each.hpp  integer_sequence.hpp  merge.hpp  to_point.hpp  utility.hpp
cslibs_ndt/include/ndt/grid/: grid.hpp  multi_grid.hpp
cslibs_ndt/include/ndt/matching/: kdtree_matcher_2D.hpp  matcher.hpp  multi_grid_matcher_2D_ls.hpp  multi_matcher.hpp  single_grid_matcher_2D.hpp
cslibs_ndt/include/ndt/visualization/: grid.hpp  kdtree.hpp
cslibs_ndt/src/: tmp.cpp
cslibs_ndt/src/nodes/: hierarchic_scan_matching_node.cpp  multi_grid_scan_matching_node.cpp  single_grid_scan_matching_node.cpp
cslibs_ndt/src/tests/: demo_grid_visualization.cpp  test_list.cpp  test_mask.cpp  test_solver.cpp  test_transformation.cpp
cslibs_ndt/test/: test_generate_indices.cpp  test_merge_and.cpp
cslibs_ndt_2d/: CMakeLists.txt  package.xml
cslibs_ndt_2d/cmake/: cslibs_ndt_2d_enable_c++11.cmake
cslibs_ndt_2d/include/cslibs_ndt_2d/common/algorithms/: matcher.hpp
cslibs_ndt_2d/include/cslibs_ndt_2d/conversion/: binary_gridmap.hpp  distance_gridmap.hpp  distributions.hpp  flatten.hpp  gridmap.hpp  likelihood_field_gridmap.hpp  merge.hpp  occupancy_gridmap.hpp  probability_gridmap.hpp
cslibs_ndt_2d/include/cslibs_ndt_2d/dynamic_maps/: gridmap.hpp  occupancy_gridmap.hpp  occupancy_single_gridmap.hpp  scaled_gridmap.hpp  weighted_occupancy_gridmap.hpp
cslibs_ndt_2d/include/cslibs_ndt_2d/dynamic_maps/algorithms/: matcher.hpp
cslibs_ndt_2d/include/cslibs_ndt_2d/matching/: ceres_scan_match_cost_functor.hpp  ceres_scan_match_cost_functor_2d.hpp  ceres_scan_match_cost_functor_3d.hpp  gridmap_match_traits.hpp  hessian.hpp  jacobian.hpp  occupancy_gridmap_match_traits.hpp
cslibs_ndt_2d/include/cslibs_ndt_2d/matching/alglib/: gridmap_function.hpp  occupancy_gridmap_function.hpp
cslibs_ndt_2d/include/cslibs_ndt_2d/matching/ceres/: problem.hpp  scan_match_cost_functor.hpp  scan_match_cost_functor_2d.hpp  scan_match_cost_functor_3d_quaternion.hpp  scan_match_cost_functor_3d_rpy.hpp
cslibs_ndt_2d/include/cslibs_ndt_2d/matching/nlopt/: gridmap_function.hpp  occupancy_gridmap_function.hpp
cslibs_ndt_2d/include/cslibs_ndt_2d/serialization/: serialization.hpp
cslibs_ndt_2d/include/cslibs_ndt_2d/serialization/dynamic_maps/: gridmap.hpp  occupancy_gridmap.hpp  weighted_occupancy_gridmap.hpp
cslibs_ndt_2d/include/cslibs_ndt_2d/serialization/static_maps/: gridmap.hpp  occupancy_gridmap.hpp
cslibs_ndt_2d/include/cslibs_ndt_2d/static_maps/: flat_gridmap.hpp  gridmap.hpp  mono_gridmap.hpp  occupancy_gridmap.hpp
cslibs_ndt_2d/launch/: laser.launch  rawseeds_2d.launch
cslibs_ndt_2d/res/: ndt_sym_2d.py
cslibs_ndt_2d/src/: ndt_map_loader.cpp  ndt_map_loader.h
cslibs_ndt_2d/src/nodes/: matching_node.cpp  ndt_map_loader.cpp  ndt_map_loader.h
cslibs_ndt_2d/test/: serialization.cpp
cslibs_ndt_3d/: CMakeLists.txt  package.xml  plugins.xml
cslibs_ndt_3d/cmake/: cslibs_ndt_3d_show_headers.cmake
cslibs_ndt_3d/include/cslibs_ndt_3d/conversion/: distributions.hpp  gridmap.hpp  occupancy_gridmap.hpp  pointcloud.hpp  sensor_msgs_pointcloud2.hpp  sensor_msgs_pointcloud2_rgb.hpp
cslibs_ndt_3d/include/cslibs_ndt_3d/dynamic_maps/: gridmap.hpp  occupancy_gridmap.hpp  occupancy_single_gridmap.hpp
cslibs_ndt_3d/include/cslibs_ndt_3d/matching/: gridmap_match_traits.hpp  hessian.hpp  icp.hpp  icp_params.hpp  icp_result.hpp  jacobian.hpp  match.hpp  match_dynamic.hpp  match_static.hpp  occupancy_gridmap_match_traits.hpp  params.hpp  result.hpp  voxel.hpp
cslibs_ndt_3d/include/cslibs_ndt_3d/serialization/: serialization.hpp
cslibs_ndt_3d/include/cslibs_ndt_3d/static_maps/: gridmap.hpp  occupancy_gridmap.hpp
cslibs_ndt_3d/launch/: rawseeds_3d.launch
cslibs_ndt_3d/msg/: Distribution.msg  DistributionArray.msg
cslibs_ndt_3d/res/: ndt_d2d_sym_jac_hes.py  ndt_sym_jac_hes.py
cslibs_ndt_3d/src/: ndt_map_loader.cpp  ndt_map_loader.h
cslibs_ndt_3d/src/nodes/: ndt_map_loader.cpp  ndt_map_loader.h
cslibs_ndt_3d/src/rviz/: ndt_display.cpp  ndt_display.h  ndt_ellipsoid.cpp  ndt_ellipsoid.h  ndt_mesh.cpp  ndt_mesh.h  ndt_visual.cpp  ndt_visual.h
cslibs_ndt_3d/test/: serialization.cpp
cslibs_ndt_3d/tex/: ndt_3d_matching.tex
(+94 files in other folders)
