<?xml version="1.0"?>
<package>
  <name>ndt</name>
  <version>0.0.2</version>
  <description>The ndt package contains an implementation of the Normal Distribution Transform.</description>

  <maintainer email="richard.hanten@uni-tuebingen.de">hanten</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>kdtree</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>kdtree</run_depend>

  <export>

  </export>
</package>
