<?xml version="1.0"?>
<package format="2">
  <name>cslibs_ndt</name>
  <version>0.0.2</version>
  <description>The ndt package contains an implementation of the Normal Distribution Transform.</description>

  <author email="richard.hanten@uni-tuebingen.de">Richard Hanten</author>
  <maintainer email="richard.hanten@uni-tuebingen.de">Richard Hanten</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>pcl_conversions</depend>
  <depend>nav_msgs</depend>
  <depend>cslibs_indexed_storage</depend>

  <export>
  </export>
</package>
