<?xml version="1.0"?>
<package format="2">
  <name>cslibs_ndt</name>
  <version>0.0.2</version>
  <description>The ndt package contains an implementation of the Normal Distributions Transform.</description>

  <author email="richard.hanten@uni-tuebingen.de">Richard Hanten</author>
  <author email="cornelia.schulz@uni-tuebingen.de">Cornelia Schulz</author>

  <maintainer email="richard.hanten@uni-tuebingen.de">Richard Hanten</maintainer>
  <maintainer email="cornelia.schulz@uni-tuebingen.de">Cornelia Schulz</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cslibs_math</depend>
  <depend>cslibs_indexed_storage</depend>
  <depend>cslibs_utility</depend>

  <export>
  </export>
</package>
