<?xml version="1.0"?>
<package format="2">
  <name>cslibs_ndt</name>
  <version>0.0.5</version>
  <description>
  The cslibs_ndt package contains common utilities needed for the different implementations and their serialization.
  </description>

  <author email="richard.hanten@uni-tuebingen.de">Richard Hanten</author>
  <author email="cornelia.schulz@uni-tuebingen.de">Cornelia Schulz</author>

  <maintainer email="richard.hanten@uni-tuebingen.de">Richard Hanten</maintainer>
  <maintainer email="cornelia.schulz@uni-tuebingen.de">Cornelia Schulz</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cslibs_math</depend>
  <depend>cslibs_indexed_storage</depend>
  <depend>cslibs_utility</depend>
  <depend>cslibs_math_2d</depend>
  <depend>cslibs_math_3d</depend>

  <export>
  </export>
</package>
