<?xml version="1.0"?>
<package format="2">
  <name>cslibs_ndt_2d</name>
  <version>0.0.2</version>
  <description>The ndt package contains an implementation of the Normal Distributions Transform.</description>

  <author email="richard.hanten@uni-tuebingen.de">Richard Hanten</author>
  <maintainer email="richard.hanten@uni-tuebingen.de">Richard Hanten</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cslibs_ndt</depend>
  <depend>cslibs_math_2d</depend>
  <depend>cslibs_math_ros</depend>
  <depend>cslibs_time</depend>
  <depend>cslibs_gridmaps</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>yaml-cpp</depend>

  <export>
  </export>
</package>
