<?xml version="1.0"?>
<package format="2">
  <name>cslibs_ndt_3d</name>
  <version>0.0.2</version>
  <description>The ndt package contains an implementation of the Normal Distributions Transform.</description>

  <author email="richard.hanten@uni-tuebingen.de">Richard Hanten</author>
  <author email="cornelia.schulz@uni-tuebingen.de">Cornelia Schulz</author>

  <maintainer email="richard.hanten@uni-tuebingen.de">Richard Hanten</maintainer>
  <maintainer email="cornelia.schulz@uni-tuebingen.de">Cornelia Schulz</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cslibs_ndt</depend>
  <depend>cslibs_math_3d</depend>
  <depend>cslibs_math_ros</depend>
  <depend>cslibs_time</depend>
  <depend>cslibs_gridmaps</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>yaml-cpp</depend>
  <depend>rviz</depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>message_generation</build_depend>

  <export>
    <rviz plugin="${prefix}/plugins.xml"/>
  </export>
</package>
