<?xml version="1.0"?>
<package format="2">
  <name>cslibs_ndt_3d</name>
  <version>0.0.3</version>
  <description>
  The cslibs_ndt_3d package contains three-dimensional implementations of map representations using
  Normal Distributions Transforms.
  </description>

  <author email="richard.hanten@uni-tuebingen.de">Richard Hanten</author>
  <author email="cornelia.schulz@uni-tuebingen.de">Cornelia Schulz</author>

  <maintainer email="richard.hanten@uni-tuebingen.de">Richard Hanten</maintainer>
  <maintainer email="cornelia.schulz@uni-tuebingen.de">Cornelia Schulz</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cslibs_ndt</depend>
  <depend>cslibs_math_3d</depend>
  <depend>cslibs_math_ros</depend>
  <depend>cslibs_time</depend>
  <depend>cslibs_gridmaps</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>yaml-cpp</depend>
  <depend>rviz</depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>message_generation</build_depend>

  <export>
    <rviz plugin="${prefix}/plugins.xml"/>
  </export>
</package>
